tests/errors/binding/port.fil
comp main<G:1>(@[G, G+1] in: 32) -> () {
    out = in;
}